--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0"
   }
 }
